<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bird1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/bird1"
        android:src="@drawable/bird1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#49c0f8"
        android:text="@string/buatProfil"
        android:fontFamily="@font/font"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:text="@string/nanti"
        android:fontFamily="@font/font"
        android:textColor="#49c0f8"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>